# MultiversChallenge

./: .gitignore  README.md
attacker/: Cargo.toml
attacker/meta/: Cargo.toml
attacker/scenarios/: attacker.scen.json
attacker/src/: attacker.rs  lottery_proxy.rs
attacker/tests/: attacker_rust_tests.rs  attacker_scenario_go_test.rs  attacker_scenario_rs_test.rs
attacker/wasm/: Cargo.toml
erc1155/: Cargo.toml  sc-config.toml
erc1155/meta/: Cargo.toml
erc1155/scenarios/: erc_1155-batch-transfer-two-fungible.scen.json  erc_1155-burn-fungible.scen.json  erc_1155-burn-nonfungible.scen.json  erc_1155-create-fungible.scen.json  erc_1155-create-nonfungible.scen.json  erc_1155-create-two-fungible-different-creator.scen.json  erc_1155-create-two-fungible-same-creator.scen.json  erc_1155-deploy.scen.json  erc_1155-mint-fungible.scen.json  erc_1155-mint-nonfungible.scen.json  erc_1155-safe-transfer-fungible-ok.scen.json  erc_1155-safe-transfer-nonfungible-ok.scen.json  erc_1155.scen.json
erc1155/src/: deposit_info.rs  erc_1155.rs
erc1155/tests/: erc_1155_scenario_go_test.rs  erc_1155_scenario_rs_test.rs  erc_1155_test.rs  erc_1155_tests.rs
erc1155/tests/erc_1155_setup/: mod.rs
erc1155/wasm/: Cargo.toml
erc1155/wasm/src/: lib.rs
lottery/: Cargo.toml
lottery/meta/: Cargo.toml
lottery/scenarios/: lottery.scen.json
lottery/src/: lottery.rs
lottery/tests/: lottery_scenario_rs_test.rs
lottery/wasm/: Cargo.toml
subscriber/: Cargo.toml
subscriber/meta/: Cargo.toml
subscriber/scenarios/: subscriber.scen.json
subscription/: Cargo.toml
(+27 files in other folders)
