[package]
name = "erc1155"
version = "0.0.0"
authors = ["you"]
edition = "2021"
publish = false

[lib]
path = "src/erc_1155.rs"
[dependencies.multiversx-sc]
version = "0.44.0"

[dev-dependencies]
num-bigint = "0.4.2"

[dev-dependencies.multiversx-sc-scenario]
version = "0.44.0"

[workspace]
members = [".", "meta"]
